--- a/TaskManagement.Api.csproj
+++ b/TaskManagement.Api.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
+
   </ItemGroup>
 
 </Project>
